Fix : Discovered that the previous version was mostly unusable due to html interpretation. Those are now replaced with innerText so that all text are taken as it is. However, this required me to use textboxes for all sections. Otherwise, the extra spaces were going to be ignored during webview rendering process.

--- a/media/main.css
+++ b/media/main.css
@@ -19,6 +19,16 @@
 	background:-moz-linear-gradient(#F9EFAF, #F7E98D);
 	background:-webkit-linear-gradient(#F9EFAF, #F7E98D);
 }
+.disabled-editor-area{
+	width:100%;
+	box-sizing:border-box;
+	display:block;
+	max-width:100%;
+	line-height:1.5;
+	padding:15px 15px 30px;
+	border-radius:3px;
+	background:#c1e1ee;
+}
 .translation-section-title{
 	padding: 1.5rem;
 	font-size: 1.4rem;
